--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <!-- Primary Meta Tags -->
     <title>CodersVault</title>
-    <meta name="title" content="450 DSA Cracker" />
+    <meta name="title" content="CodersVault" />
     <meta
       name="description"
       content="Crack your fear of solving DSA 🔥. Curated list of 400+ topic wise questions to make you a DSA Ninja "
@@ -28,25 +28,6 @@
       crossorigin="anonymous"
     />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.450dsa.com/" />
-    <meta property="og:title" content="450 DSA Cracker" />
-    <meta
-      property="og:description"
-      content="Crack your fear of solving DSA 🔥. Curated list of 400+ topic wise questions to make you a DSA Ninja "
-    />
-    <meta property="og:image" content="/logo512.png" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.450dsa.com/" />
-    <meta property="twitter:title" content="450 DSA Cracker" />
-    <meta
-      property="twitter:description"
-      content="Crack your fear of solving DSA 🔥. Curated list of 400+ topic wise questions to make you a DSA Ninja "
-    />
-    <meta property="twitter:image" content="/logo512.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
