Adding SEO to CodersVault

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- Primary Meta Tags -->
-    <title>CodersVault</title>
-    <meta name="title" content="CodersVault" />
+    <!-- Primary Meta Tags -->
+    <title>CodersVault - Your Gateway to crack DSA🔥</title>
     <meta
       name="description"
-      content="Crack your fear of solving DSA 🔥. Curated list of 400+ topic wise questions to make you a DSA Ninja "
+      content="CodersVault is a Reactjs web app that has categorized handpicked questions from top software developers and also helps in overall learning of DSA through handpicked questions and top playlists for every topic of DSA. It has a vast set of ~500 handpicked questions."
     />
+    <meta
+      name="keywords"
+      content="CodersVault, DSA, handpicked questions, playlists, software developers, Love Babbar DSA sheet, Striver DSA sheet, Arsh Goyal Placement Preparation sheet, Arsh Goyal Sheet, Fraz DSA sheet, Placement Preparation"
+    />
+    <meta name="author" content="Harsh, Piyush, Pratyush, Adarsh" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://codersvault.netlify.app/" />
+    <meta
+      property="og:title"
+      content="CodersVault - Handpicked DSA Questions and Playlists"
+    />
+    <meta
+      property="og:description"
+      content="CodersVault is a Reactjs web app that has categorized handpicked questions from top software developers and also helps in overall learning of DSA through handpicked questions and top playlists for every topic of DSA. It has a vast set of ~500 handpicked questions."
+    />
+    <meta
+      property="og:image"
+      content="https://www.example.com/images/preview.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://codersvault.netlify.app/" />
+    <meta
+      property="twitter:title"
+      content="CodersVault - Handpicked DSA Questions and Playlists"
+    />
+    <meta
+      property="twitter:description"
+      content="CodersVault is a Reactjs web app that has categorized handpicked questions from top software developers and also helps in overall learning of DSA through handpicked questions and top playlists for every topic of DSA. It has a vast set of ~500 handpicked questions."
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.example.com/images/preview.jpg"
+    />
+
     <!-- Font awesome link, change if neccessary -->
     <link
       rel="stylesheet"
